# GameMaker-Save

./: .gitignore  Cargo.toml  LICENCE-APACHE  README.md
.github/workflows/: release.yml
gm-save-core/: Cargo.toml  README.md
gm-save-core/src/: crypto.rs  error.rs  lib.rs  save.rs
gm-save-ffi/: Cargo.toml
gm-save-ffi/src/: lib.rs  state.rs
gml/: gm_save.gml
